// ExplainMyBody Database Schema
// Use this at https://dbdiagram.io/

Project ExplainMyBody {
  database_type: 'PostgreSQL'
  Note: '''
    # ExplainMyBody LLM System
    PostgreSQL + pgvector를 사용한 건강 분석 시스템
    - JSONB를 활용한 유연한 측정 데이터 저장
    - pgvector extension으로 향후 임베딩 검색 지원
  '''
}

Table users {
  id serial [pk, increment]
  username varchar(255) [not null]
  email varchar(255) [unique, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: '사용자 정보'
}

Table user_goals {
  id serial [pk, increment]
  user_id integer [not null]
  goal_type varchar(255)
  started_at timestamp [default: `CURRENT_TIMESTAMP`]
  ended_at timestamp [null]

  Note: '사용자 목표 (체중 감량, 근육 증가 등)'

  indexes {
    user_id
  }
}

Table health_records {
  id serial [pk, increment]
  user_id integer [not null]
  source varchar(100) [default: 'manual']
  measured_at timestamp [default: `CURRENT_TIMESTAMP`]
  measurements jsonb [not null, note: '체형, BMI, 근육량 등 모든 측정 데이터']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: '''
    건강 측정 기록
    - measurements: JSONB 필드로 유연한 데이터 구조 지원
    - source: 데이터 출처 (manual, inbody, smartwatch 등)
  '''

  indexes {
    user_id
    (user_id, measured_at) [name: 'idx_health_records_user_measured']
    measurements [type: gin, name: 'idx_health_records_measurements_gin']
  }
}

Table analysis_reports {
  id serial [pk, increment]
  user_id integer [not null]
  record_id integer [not null]
  llm_output text [not null, note: 'LLM이 생성한 건강 분석 리포트']
  model_version varchar(100) [note: 'claude-3-5-sonnet, gpt-4 등']
  generated_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: 'LLM 생성 건강 분석 리포트'

  indexes {
    user_id
    record_id
  }
}

// Foreign Key Relationships with ON DELETE CASCADE
Ref: user_goals.user_id > users.id [delete: cascade]
Ref: health_records.user_id > users.id [delete: cascade]
Ref: analysis_reports.user_id > users.id [delete: cascade]
Ref: analysis_reports.record_id > health_records.id [delete: cascade]

// Example JSONB structure in health_records.measurements:
// {
//   "BMI": 23.5,
//   "체중": 70.5,
//   "키": 175.0,
//   "stage1_비만도체형": "정상",
//   "stage2_근육보정체형": "근육형",
//   "골격근량": 32.5,
//   "체지방률": 18.2,
//   "근육_부위별등급": {
//     "왼팔": "표준이상",
//     "오른팔": "표준",
//     "왼다리": "우수",
//     "오른다리": "우수",
//     "몸통": "표준"
//   }
// }
